// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeycloakStack スナップショット dev 環境のテンプレートがスナップショットと一致する 1`] = `
{
  "Outputs": {
    "ALBDNSName": {
      "Description": "ALB DNS Name",
      "Export": {
        "Name": "memoru-dev-keycloak-alb-dns",
      },
      "Value": {
        "Fn::GetAtt": [
          "KeycloakServiceLBDA20ED16",
          "DNSName",
        ],
      },
    },
    "DBSecretArn": {
      "Description": "Database Secret ARN",
      "Export": {
        "Name": "memoru-dev-keycloak-db-secret-arn",
      },
      "Value": {
        "Ref": "DBSecretD58955BC",
      },
    },
    "ECSClusterArn": {
      "Description": "ECS Cluster ARN",
      "Export": {
        "Name": "memoru-dev-keycloak-cluster-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClusterEB0386A7",
          "Arn",
        ],
      },
    },
    "KeycloakAdminSecretArn": {
      "Description": "Keycloak Admin Secret ARN",
      "Export": {
        "Name": "memoru-dev-keycloak-admin-secret-arn",
      },
      "Value": {
        "Ref": "KeycloakAdminSecret02FB07E0",
      },
    },
    "KeycloakServiceLoadBalancerDNSCC22036B": {
      "Value": {
        "Fn::GetAtt": [
          "KeycloakServiceLBDA20ED16",
          "DNSName",
        ],
      },
    },
    "KeycloakServiceServiceURL69883E97": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "KeycloakServiceLBDA20ED16",
                "DNSName",
              ],
            },
          ],
        ],
      },
    },
    "KeycloakURL": {
      "Description": "Keycloak URL",
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "KeycloakServiceLBDA20ED16",
                "DNSName",
              ],
            },
          ],
        ],
      },
    },
    "RDSEndpoint": {
      "Description": "RDS Endpoint",
      "Export": {
        "Name": "memoru-dev-keycloak-db-endpoint",
      },
      "Value": {
        "Fn::GetAtt": [
          "DatabaseB269D8BB",
          "Endpoint.Address",
        ],
      },
    },
    "VpcId": {
      "Description": "VPC ID",
      "Export": {
        "Name": "memoru-dev-vpc-id",
      },
      "Value": {
        "Ref": "Vpc8378EB38",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ClusterEB0386A7": {
      "Properties": {
        "ClusterName": "memoru-dev-keycloak-cluster",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "disabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "DBSecretAttachmentC565A14F": {
      "Properties": {
        "SecretId": {
          "Ref": "DBSecretD58955BC",
        },
        "TargetId": {
          "Ref": "DatabaseB269D8BB",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DBSecretD58955BC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Keycloak database credentials",
        "GenerateSecretString": {
          "ExcludeCharacters": ""@/\\",
          "GenerateStringKey": "password",
          "PasswordLength": 32,
          "SecretStringTemplate": "{"username":"keycloak"}",
        },
        "Name": "memoru-dev-keycloak-db-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DatabaseB269D8BB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AllocatedStorage": "20",
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t3.micro",
        "DBInstanceIdentifier": "memoru-dev-keycloak-db",
        "DBName": "keycloak",
        "DBParameterGroupName": {
          "Ref": "DatabaseParameterGroup2A921026",
        },
        "DBSubnetGroupName": {
          "Ref": "DatabaseSubnetGroup7D60F180",
        },
        "DeletionProtection": false,
        "Engine": "postgres",
        "EngineVersion": "17",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DBSecretD58955BC",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DBSecretD58955BC",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "MultiAZ": false,
        "PubliclyAccessible": false,
        "StorageEncrypted": true,
        "StorageType": "gp3",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "RDSSecurityGroup6BF2CF10",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "DatabaseParameterGroup2A921026": {
      "Properties": {
        "Description": "Parameter group for postgres17",
        "Family": "postgres17",
        "Parameters": {
          "client_encoding": "UTF8",
        },
      },
      "Type": "AWS::RDS::DBParameterGroup",
    },
    "DatabaseSubnetGroup7D60F180": {
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for Database database",
        "SubnetIds": [
          {
            "Ref": "VpcPrivateSubnet1Subnet536B997A",
          },
          {
            "Ref": "VpcPrivateSubnet2Subnet3788AAA1",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "KeycloakAdminSecret02FB07E0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Keycloak admin credentials",
        "GenerateSecretString": {
          "ExcludeCharacters": ""@/\\",
          "GenerateStringKey": "password",
          "PasswordLength": 16,
          "SecretStringTemplate": "{"username":"admin"}",
        },
        "Name": "memoru-dev-keycloak-admin-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "KeycloakService002681F6": {
      "DependsOn": [
        "KeycloakServiceLBPublicListenerECSGroup7008E672",
        "KeycloakServiceLBPublicListenerF1BD9FFE",
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "Cluster": {
          "Ref": "ClusterEB0386A7",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50,
        },
        "DeploymentController": {
          "Type": "ECS",
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 180,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 8080,
            "TargetGroupArn": {
              "Ref": "KeycloakServiceLBPublicListenerECSGroup7008E672",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "KeycloakServiceSecurityGroupEEE9A853",
                  "GroupId",
                ],
              },
            ],
            "Subnets": [
              {
                "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
              },
              {
                "Ref": "VpcPublicSubnet2Subnet691E08A3",
              },
            ],
          },
        },
        "ServiceName": "memoru-dev-keycloak-service",
        "TaskDefinition": {
          "Ref": "KeycloakServiceTaskDef778B54C2",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "KeycloakServiceLBDA20ED16": {
      "DependsOn": [
        "VpcPublicSubnet1DefaultRoute3DA9E72A",
        "VpcPublicSubnet1RouteTableAssociation97140677",
        "VpcPublicSubnet2DefaultRoute97F91067",
        "VpcPublicSubnet2RouteTableAssociationDD5762D8",
      ],
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "KeycloakServiceLBSecurityGroupF2682F29",
              "GroupId",
            ],
          },
        ],
        "Subnets": [
          {
            "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
          },
          {
            "Ref": "VpcPublicSubnet2Subnet691E08A3",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "KeycloakServiceLBPublicListenerECSGroup7008E672": {
      "Properties": {
        "HealthCheckPath": "/health/ready",
        "Matcher": {
          "HttpCode": "200",
        },
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "KeycloakServiceLBPublicListenerF1BD9FFE": {
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "KeycloakServiceLBPublicListenerECSGroup7008E672",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "KeycloakServiceLBDA20ED16",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "KeycloakServiceLBSecurityGroupF2682F29": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB TestKeycloakStackKeycloakServiceLB2D1284C3",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "KeycloakServiceLBSecurityGrouptoTestKeycloakStackKeycloakServiceSecurityGroup0D776A9B8080F40BE80C": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "FromPort": 8080,
        "GroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceLBSecurityGroupF2682F29",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "KeycloakServiceSecurityGroupEEE9A853": {
      "DependsOn": [
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "GroupDescription": "TestKeycloakStack/KeycloakService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "KeycloakServiceSecurityGroupfromTestKeycloakStackKeycloakServiceLBSecurityGroupFD8F4B558080C4C44BED": {
      "DependsOn": [
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 8080,
        "GroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceLBSecurityGroupF2682F29",
            "GroupId",
          ],
        },
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "KeycloakServiceTaskDef778B54C2": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "start",
              "--optimized",
            ],
            "Environment": [
              {
                "Name": "KC_DB",
                "Value": "postgres",
              },
              {
                "Name": "KC_DB_URL",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "jdbc:postgresql://",
                      {
                        "Fn::GetAtt": [
                          "DatabaseB269D8BB",
                          "Endpoint.Address",
                        ],
                      },
                      ":5432/keycloak",
                    ],
                  ],
                },
              },
              {
                "Name": "KC_HOSTNAME",
                "Value": "",
              },
              {
                "Name": "KC_HOSTNAME_STRICT",
                "Value": "false",
              },
              {
                "Name": "KC_HOSTNAME_STRICT_HTTPS",
                "Value": "false",
              },
              {
                "Name": "KC_PROXY_HEADERS",
                "Value": "xforwarded",
              },
              {
                "Name": "KC_HTTP_ENABLED",
                "Value": "true",
              },
              {
                "Name": "KC_HEALTH_ENABLED",
                "Value": "true",
              },
              {
                "Name": "KC_METRICS_ENABLED",
                "Value": "true",
              },
            ],
            "Essential": true,
            "Image": "quay.io/keycloak/keycloak:24.0",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "LogGroupF5B46931",
                },
                "awslogs-region": {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "keycloak",
              },
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 8080,
                "Protocol": "tcp",
              },
            ],
            "Secrets": [
              {
                "Name": "KC_DB_USERNAME",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "DBSecretD58955BC",
                      },
                      ":username::",
                    ],
                  ],
                },
              },
              {
                "Name": "KC_DB_PASSWORD",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "DBSecretD58955BC",
                      },
                      ":password::",
                    ],
                  ],
                },
              },
              {
                "Name": "KEYCLOAK_ADMIN",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "KeycloakAdminSecret02FB07E0",
                      },
                      ":username::",
                    ],
                  ],
                },
              },
              {
                "Name": "KEYCLOAK_ADMIN_PASSWORD",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "KeycloakAdminSecret02FB07E0",
                      },
                      ":password::",
                    ],
                  ],
                },
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "KeycloakServiceTaskDefExecutionRoleF3AB432D",
            "Arn",
          ],
        },
        "Family": "TestKeycloakStackKeycloakServiceTaskDef8E6D0D41",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "KeycloakServiceTaskDefTaskRole86519850",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "KeycloakServiceTaskDefExecutionRoleDefaultPolicy2A28139A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "LogGroupF5B46931",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "DBSecretD58955BC",
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "KeycloakAdminSecret02FB07E0",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "KeycloakServiceTaskDefExecutionRoleDefaultPolicy2A28139A",
        "Roles": [
          {
            "Ref": "KeycloakServiceTaskDefExecutionRoleF3AB432D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "KeycloakServiceTaskDefExecutionRoleF3AB432D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "KeycloakServiceTaskDefTaskRole86519850": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "LogGroupF5B46931": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/ecs/memoru-dev-keycloak",
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "RDSSecurityGroup6BF2CF10": {
      "Properties": {
        "GroupDescription": "Security group for Keycloak RDS",
        "GroupName": "memoru-dev-keycloak-rds-sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "RDSSecurityGroupfromTestKeycloakStackKeycloakServiceSecurityGroup0D776A9B5432F449FA47": {
      "Properties": {
        "Description": "PostgreSQL from ECS",
        "FromPort": 5432,
        "GroupId": {
          "Fn::GetAtt": [
            "RDSSecurityGroup6BF2CF10",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "Vpc8378EB38": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "memoru-dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIGWD7BA715C": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "memoru-dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet1Subnet536B997A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet1RouteTableB2C5B500": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet1Subnet536B997A": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPrivateSubnet2RouteTableA678073B": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet2Subnet3788AAA1",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet2Subnet3788AAA1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcVPCGWBF912B6E": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`KeycloakStack スナップショット prod 環境のテンプレートがスナップショットと一致する 1`] = `
{
  "Outputs": {
    "ALBDNSName": {
      "Description": "ALB DNS Name",
      "Export": {
        "Name": "memoru-prod-keycloak-alb-dns",
      },
      "Value": {
        "Fn::GetAtt": [
          "KeycloakServiceLBDA20ED16",
          "DNSName",
        ],
      },
    },
    "DBSecretArn": {
      "Description": "Database Secret ARN",
      "Export": {
        "Name": "memoru-prod-keycloak-db-secret-arn",
      },
      "Value": {
        "Ref": "DBSecretD58955BC",
      },
    },
    "ECSClusterArn": {
      "Description": "ECS Cluster ARN",
      "Export": {
        "Name": "memoru-prod-keycloak-cluster-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClusterEB0386A7",
          "Arn",
        ],
      },
    },
    "KeycloakAdminSecretArn": {
      "Description": "Keycloak Admin Secret ARN",
      "Export": {
        "Name": "memoru-prod-keycloak-admin-secret-arn",
      },
      "Value": {
        "Ref": "KeycloakAdminSecret02FB07E0",
      },
    },
    "KeycloakServiceLoadBalancerDNSCC22036B": {
      "Value": {
        "Fn::GetAtt": [
          "KeycloakServiceLBDA20ED16",
          "DNSName",
        ],
      },
    },
    "KeycloakServiceServiceURL69883E97": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "KeycloakServiceLBDA20ED16",
                "DNSName",
              ],
            },
          ],
        ],
      },
    },
    "KeycloakURL": {
      "Description": "Keycloak URL",
      "Value": "https://keycloak.example.com",
    },
    "RDSEndpoint": {
      "Description": "RDS Endpoint",
      "Export": {
        "Name": "memoru-prod-keycloak-db-endpoint",
      },
      "Value": {
        "Fn::GetAtt": [
          "DatabaseB269D8BB",
          "Endpoint.Address",
        ],
      },
    },
    "VpcId": {
      "Description": "VPC ID",
      "Export": {
        "Name": "memoru-prod-vpc-id",
      },
      "Value": {
        "Ref": "Vpc8378EB38",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ClusterEB0386A7": {
      "Properties": {
        "ClusterName": "memoru-prod-keycloak-cluster",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "enabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "DBSecretAttachmentC565A14F": {
      "Properties": {
        "SecretId": {
          "Ref": "DBSecretD58955BC",
        },
        "TargetId": {
          "Ref": "DatabaseB269D8BB",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DBSecretD58955BC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Keycloak database credentials",
        "GenerateSecretString": {
          "ExcludeCharacters": ""@/\\",
          "GenerateStringKey": "password",
          "PasswordLength": 32,
          "SecretStringTemplate": "{"username":"keycloak"}",
        },
        "Name": "memoru-prod-keycloak-db-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DNSRecord4A9429C1": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::Join": [
              "",
              [
                "dualstack.",
                {
                  "Fn::GetAtt": [
                    "KeycloakServiceLBDA20ED16",
                    "DNSName",
                  ],
                },
              ],
            ],
          },
          "HostedZoneId": {
            "Fn::GetAtt": [
              "KeycloakServiceLBDA20ED16",
              "CanonicalHostedZoneID",
            ],
          },
        },
        "HostedZoneId": "Z0123456789ABCDEF",
        "Name": "keycloak.example.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DatabaseB269D8BB": {
      "DeletionPolicy": "Snapshot",
      "Properties": {
        "AllocatedStorage": "20",
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t3.micro",
        "DBInstanceIdentifier": "memoru-prod-keycloak-db",
        "DBName": "keycloak",
        "DBParameterGroupName": {
          "Ref": "DatabaseParameterGroup2A921026",
        },
        "DBSubnetGroupName": {
          "Ref": "DatabaseSubnetGroup7D60F180",
        },
        "DeletionProtection": true,
        "Engine": "postgres",
        "EngineVersion": "17",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DBSecretD58955BC",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DBSecretD58955BC",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "MultiAZ": true,
        "PubliclyAccessible": false,
        "StorageEncrypted": true,
        "StorageType": "gp3",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "RDSSecurityGroup6BF2CF10",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Snapshot",
    },
    "DatabaseParameterGroup2A921026": {
      "Properties": {
        "Description": "Parameter group for postgres17",
        "Family": "postgres17",
        "Parameters": {
          "client_encoding": "UTF8",
        },
      },
      "Type": "AWS::RDS::DBParameterGroup",
    },
    "DatabaseSubnetGroup7D60F180": {
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for Database database",
        "SubnetIds": [
          {
            "Ref": "VpcPrivateSubnet1Subnet536B997A",
          },
          {
            "Ref": "VpcPrivateSubnet2Subnet3788AAA1",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "KeycloakAdminSecret02FB07E0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Keycloak admin credentials",
        "GenerateSecretString": {
          "ExcludeCharacters": ""@/\\",
          "GenerateStringKey": "password",
          "PasswordLength": 16,
          "SecretStringTemplate": "{"username":"admin"}",
        },
        "Name": "memoru-prod-keycloak-admin-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "KeycloakService002681F6": {
      "DependsOn": [
        "KeycloakServiceLBPublicListenerECSGroup7008E672",
        "KeycloakServiceLBPublicListenerF1BD9FFE",
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "Cluster": {
          "Ref": "ClusterEB0386A7",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50,
        },
        "DeploymentController": {
          "Type": "ECS",
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 180,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 8080,
            "TargetGroupArn": {
              "Ref": "KeycloakServiceLBPublicListenerECSGroup7008E672",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "KeycloakServiceSecurityGroupEEE9A853",
                  "GroupId",
                ],
              },
            ],
            "Subnets": [
              {
                "Ref": "VpcPrivateSubnet1Subnet536B997A",
              },
              {
                "Ref": "VpcPrivateSubnet2Subnet3788AAA1",
              },
            ],
          },
        },
        "ServiceName": "memoru-prod-keycloak-service",
        "TaskDefinition": {
          "Ref": "KeycloakServiceTaskDef778B54C2",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "KeycloakServiceLBDA20ED16": {
      "DependsOn": [
        "VpcPublicSubnet1DefaultRoute3DA9E72A",
        "VpcPublicSubnet1RouteTableAssociation97140677",
        "VpcPublicSubnet2DefaultRoute97F91067",
        "VpcPublicSubnet2RouteTableAssociationDD5762D8",
      ],
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "KeycloakServiceLBSecurityGroupF2682F29",
              "GroupId",
            ],
          },
        ],
        "Subnets": [
          {
            "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
          },
          {
            "Ref": "VpcPublicSubnet2Subnet691E08A3",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "KeycloakServiceLBPublicListenerECSGroup7008E672": {
      "Properties": {
        "HealthCheckPath": "/health/ready",
        "Matcher": {
          "HttpCode": "200",
        },
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "KeycloakServiceLBPublicListenerF1BD9FFE": {
      "Properties": {
        "Certificates": [
          {
            "CertificateArn": "arn:aws:acm:ap-northeast-1:123456789012:certificate/test-cert",
          },
        ],
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "KeycloakServiceLBPublicListenerECSGroup7008E672",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "KeycloakServiceLBDA20ED16",
        },
        "Port": 443,
        "Protocol": "HTTPS",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "KeycloakServiceLBPublicRedirectListenerF61F172E": {
      "DependsOn": [
        "KeycloakServiceLBPublicListenerECSGroup7008E672",
        "KeycloakServiceLBPublicListenerF1BD9FFE",
      ],
      "Properties": {
        "DefaultActions": [
          {
            "RedirectConfig": {
              "Port": "443",
              "Protocol": "HTTPS",
              "StatusCode": "HTTP_301",
            },
            "Type": "redirect",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "KeycloakServiceLBDA20ED16",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "KeycloakServiceLBSecurityGroupF2682F29": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB TestKeycloakStackKeycloakServiceLB2D1284C3",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 443",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "KeycloakServiceLBSecurityGrouptoTestKeycloakStackKeycloakServiceSecurityGroup0D776A9B8080F40BE80C": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "FromPort": 8080,
        "GroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceLBSecurityGroupF2682F29",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "KeycloakServiceSecurityGroupEEE9A853": {
      "DependsOn": [
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "GroupDescription": "TestKeycloakStack/KeycloakService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "KeycloakServiceSecurityGroupfromTestKeycloakStackKeycloakServiceLBSecurityGroupFD8F4B558080C4C44BED": {
      "DependsOn": [
        "KeycloakServiceTaskDefTaskRole86519850",
      ],
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 8080,
        "GroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceLBSecurityGroupF2682F29",
            "GroupId",
          ],
        },
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "KeycloakServiceTaskDef778B54C2": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "start",
              "--optimized",
            ],
            "Environment": [
              {
                "Name": "KC_DB",
                "Value": "postgres",
              },
              {
                "Name": "KC_DB_URL",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "jdbc:postgresql://",
                      {
                        "Fn::GetAtt": [
                          "DatabaseB269D8BB",
                          "Endpoint.Address",
                        ],
                      },
                      ":5432/keycloak",
                    ],
                  ],
                },
              },
              {
                "Name": "KC_HOSTNAME",
                "Value": "keycloak.example.com",
              },
              {
                "Name": "KC_HOSTNAME_STRICT",
                "Value": "true",
              },
              {
                "Name": "KC_HOSTNAME_STRICT_HTTPS",
                "Value": "true",
              },
              {
                "Name": "KC_PROXY_HEADERS",
                "Value": "xforwarded",
              },
              {
                "Name": "KC_HTTP_ENABLED",
                "Value": "false",
              },
              {
                "Name": "KC_HEALTH_ENABLED",
                "Value": "true",
              },
              {
                "Name": "KC_METRICS_ENABLED",
                "Value": "true",
              },
            ],
            "Essential": true,
            "Image": "quay.io/keycloak/keycloak:24.0",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "LogGroupF5B46931",
                },
                "awslogs-region": {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "keycloak",
              },
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 8080,
                "Protocol": "tcp",
              },
            ],
            "Secrets": [
              {
                "Name": "KC_DB_USERNAME",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "DBSecretD58955BC",
                      },
                      ":username::",
                    ],
                  ],
                },
              },
              {
                "Name": "KC_DB_PASSWORD",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "DBSecretD58955BC",
                      },
                      ":password::",
                    ],
                  ],
                },
              },
              {
                "Name": "KEYCLOAK_ADMIN",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "KeycloakAdminSecret02FB07E0",
                      },
                      ":username::",
                    ],
                  ],
                },
              },
              {
                "Name": "KEYCLOAK_ADMIN_PASSWORD",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Ref": "KeycloakAdminSecret02FB07E0",
                      },
                      ":password::",
                    ],
                  ],
                },
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "KeycloakServiceTaskDefExecutionRoleF3AB432D",
            "Arn",
          ],
        },
        "Family": "TestKeycloakStackKeycloakServiceTaskDef8E6D0D41",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "KeycloakServiceTaskDefTaskRole86519850",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "KeycloakServiceTaskDefExecutionRoleDefaultPolicy2A28139A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "LogGroupF5B46931",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "DBSecretD58955BC",
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "KeycloakAdminSecret02FB07E0",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "KeycloakServiceTaskDefExecutionRoleDefaultPolicy2A28139A",
        "Roles": [
          {
            "Ref": "KeycloakServiceTaskDefExecutionRoleF3AB432D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "KeycloakServiceTaskDefExecutionRoleF3AB432D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "KeycloakServiceTaskDefTaskRole86519850": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "LogGroupF5B46931": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/ecs/memoru-prod-keycloak",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "RDSSecurityGroup6BF2CF10": {
      "Properties": {
        "GroupDescription": "Security group for Keycloak RDS",
        "GroupName": "memoru-prod-keycloak-rds-sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "RDSSecurityGroupfromTestKeycloakStackKeycloakServiceSecurityGroup0D776A9B5432F449FA47": {
      "Properties": {
        "Description": "PostgreSQL from ECS",
        "FromPort": 5432,
        "GroupId": {
          "Fn::GetAtt": [
            "RDSSecurityGroup6BF2CF10",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "KeycloakServiceSecurityGroupEEE9A853",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "Vpc8378EB38": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "memoru-prod-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIGWD7BA715C": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "memoru-prod-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet1NATGateway4D7517AA",
        },
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet1Subnet536B997A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet1RouteTableB2C5B500": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet1Subnet536B997A": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPrivateSubnet2DefaultRoute060D2087": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet1NATGateway4D7517AA",
        },
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPrivateSubnet2RouteTableA678073B": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet2Subnet3788AAA1",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet2Subnet3788AAA1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1EIPD7E02669": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcPublicSubnet1NATGateway4D7517AA": {
      "DependsOn": [
        "VpcPublicSubnet1DefaultRoute3DA9E72A",
        "VpcPublicSubnet1RouteTableAssociation97140677",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcPublicSubnet1EIPD7E02669",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestKeycloakStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcVPCGWBF912B6E": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
